syntax = "proto3";

option csharp_namespace = "grpcMaterialServer";

package materials;

service Material {

  rpc SendCreateMaterial(MaterialCreateRequest) returns (MaterialCreateReply);  
}

message MaterialCreateRequest {
  string name = 1;
  string description=2;
  string sku=3;
}

message MaterialCreateReply {
  string message = 1;
}
